--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,10 +17,11 @@ services:
 
       PAGE_SIZE: 10
 
-      REDIS_IP: redis
+      REDIS_HOST: redis
       REDIS_PASSWORD: Wei891013
-      REDIS_PORT: 6379
+      REDIS_PORT: 26379
       REDIS_DB: 0
+      REDIS_MASTER: my-master
 
       CELERY_TASK: tasks
 
