--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,7 +17,7 @@ services:
 
       PAGE_SIZE: 10
 
-      REDIS_IP: redis
+      REDIS_HOST: redis
       REDIS_PASSWORD: Wei891013
       REDIS_PORT: 6379
       REDIS_DB: 0
